<resources>
    <string name="app_name">TTU Schedule</string>
    <string name="action_today">Today</string>
    <string name="action_renew">Update</string>

    <string name="drawer_item_view_day">Day</string>
    <string name="drawer_item_view_three_days">3 Days</string>
    <string name="drawer_item_change_schedule">Add/Change schedule</string>
    <string name="drawer_item_section_preferences">Preferences</string>
    <string name="drawer_item_about">About</string>

    <string name="err_network">Network connection missing!</string>
    <string name="empty_list">Swipe to get groups</string>

    <string name="preferences_user_info_title">User info</string>
    <string name="preferences_about_title">About</string>
    <string name="preferences_build_version">Build version</string>
    <string name="preferences_selected_group">Selected group</string>

    <string name="loading_successful">Loading successful</string>
    <string name="loading_failed">Loading failed</string>
    <string name="action_search_group">Search group</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
